src/web/assets/cp/src/css/_global-sidebar.scss
.global-sidebar {
  --is-always-visible: true;
  --prefix-width: calc(30rem / 16);
  --prefix-ratio: 1;
  --gutter-width: calc(10rem / 16); // Left and right padding

  position: sticky;
  top: 0;
  z-index: $sidebarZIndex;
  display: flex;
  flex-direction: column;
  height: 100vh;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  background-color: transparent;
  border-right: 1px solid var(--hairline-color);
  width: var(--global-sidebar-width);

  a {
    text-decoration: none;
  }

  & > a,
  *:not(.has-subnav) > a {
    &:not([href]) {
      cursor: default;
      background-color: transparent;
    }
  }

  @media only screen and (max-width: $minFullUiWidth - calc(1rem/16)) {
    --is-always-visible: false;
  }
}

.global-sidebar__nav {
  padding: var(--s) 0;
}

.global-sidebar__footer {
  margin-block-start: auto;
  display: grid;
  gap: var(--s);
}

.global-nav > ul {
  display: flex;
  flex-direction: column;
  gap: var(--s);
}

.global-nav > ul > li {
  position: relative;
}

.global-nav > ul > li.sel {
}

.nav-icon {
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 1rem;
  aspect-ratio: 1;
  line-height: 0;

  --thumb-size: 1rem;

  > svg {
    @include svg-mask(currentColor);
    width: 100%;
    height: 100%;
  }
}

.nav-item {
  --gutter-width: calc(10rem / 16);
  display: grid;
  grid-template-columns: var(--gutter-width) 1fr var(--prefix-width) var(
      --gutter-width
    );
  grid-template-areas: '. action trigger .' 'subnav subnav subnav subnav';
  align-items: center;
  width: 100%;

  > .sidebar-action {
    grid-area: action;
  }
}

.nav-item__trigger {
  --icon-size: 10px;
  --trigger-size: var(--touch-target-size);
  grid-area: trigger;
  display: flex;
  z-index: 1;

  .menubtn {
    padding: 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: var(--trigger-size);
    height: var(--trigger-size);
    border: transparent;

    &:hover {
      background-color: var(--ui-control-bg-color);
    }

    &[aria-expanded='true']:not(:hover) {
      background-color: transparent;
    }

    &[aria-expanded='true']:after {
      @include angle(up);
    }

    &:after {
      margin-left: 0 !important;
    }
  }
}

.nav-item__subnav {
  --prefix-ratio: 4/3;
  @include visually-hidden;
  grid-area: subnav;

  &.is-open {
    @include not-visually-hidden;
  }
}

.badge {
  display: inline-flex;
  justify-content: center;
  text-align: center;
  font-size: 11px;
  line-height: 1rem;
  min-width: 1.1rem;
  height: 1rem;
  padding: 0 var(--xs);
  border-radius: var(--s);
  background-color: var(--medium-text-color);
  color: var(--white);
}

.sidebar-actions {
  padding: 10px var(--gutter-width); // match padding of #system-info
}

.sidebar-action {
  --thumb-size: 0.75rem;
  display: flex;
  width: 100%;
  align-items: center;
  position: relative;
  text-align: left;
  border-radius: var(--medium-border-radius);
  color: currentColor;
  cursor: pointer;
  gap: 7px; // magic number to align with system name
  min-height: 30px;

  &:before {
    content: '';
    position: absolute;
    left: calc((10rem / 16) * -1); // match #system-name
    top: 50%;
    height: 80%;
    transform: translateY(-50%);
    width: var(--xs);
  }

  &:focus-visible,
  &:hover {
    background-color: var(--gray-200);
  }

  &.sel {
    &:before {
      --indicator-size: 6px;
      background-color: currentColor;
    }
  }
}

.sidebar-action--sub {
  --indicator-size: 4px;
  font-size: 0.9em;
  min-height: 26px;

  &:before {
    width: var(--indicator-size);
    height: var(--indicator-size);
    border-radius: 100%;
    left: calc((30px / 2) - (var(--indicator-size) / 2));
    top: 50%;
    background-color: var(--gray-300);
  }
}

.sidebar-action--job {
  align-items: flex-start;

  .sidebar-action__label {
    padding-block: var(--xs);
  }

  &[href]:hover {
    background-color: transparent;

    .icon > span.icon > canvas#job-icon-hover {
      opacity: 1;
    }
  }

  .label {
    white-space: normal;
  }

  .progress-label {
    display: block;
    color: var(--gray-300);
    font-size: 11px;
    line-height: 1.5;
  }

  .nav-icon {
    display: block;
    position: relative;
    width: 16px;
    height: 16px;

    & > canvas {
      display: block;
      position: absolute;
      width: 16px;
      height: 16px;

      &#job-icon-hover {
        opacity: 0;
      }
    }
  }
}

.sidebar-action__prefix {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--prefix-width);
  aspect-ratio: var(--prefix-ratio);
  line-height: 0;
  flex-shrink: 0;
}

.sidebar-action__label {
  display: inline-flex;
  gap: var(--s);
  align-items: center;
  padding: 0 var(--xs);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-grow: 1;
}

.sidebar-action__badge {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 var(--s);
  margin-left: auto;
}

/**
States
 */
@media only screen and (min-width: $minFullUiWidth) {
  [data-sidebar='collapsed'] {
    .global-sidebar {
      --global-sidebar-width: calc(50rem / 16);
    }

    .nav-item {
      grid-template-areas: '. action .' '. trigger .' 'subnav subnav subnav';
      grid-template-columns: var(--gutter-width) var(--prefix-width) var(
          --gutter-width
        );
    }

    .nav-item__indicator {
      right: -1px;
    }

    .sidebar-action {
      width: var(--prefix-width);
      min-height: var(--prefix-width);

      &:focus-visible,
      &:hover {
        .sidebar-action__label {
          opacity: 1;
          transform: translateY(-50%) translateX(0);
        }
      }
    }

    .nav-item__trigger {
      .menubtn {
        width: 100%;
        height: auto;
        padding-block: 2px var(--xs);
      }
    }

    .sidebar-action__label {
      position: absolute;
      z-index: 10;
      left: calc(100% + (var(--xs) * 2));
      top: 50%;
      transform: translateY(-50%) translateX(-5px);
      opacity: 0;
      @include pane;
      color: var(--text-color);
      border-radius: var(--medium-border-radius);
      padding: var(--xs) var(--s);
      pointer-events: none;

      @media screen and (prefers-reduced-motion: no-preference) {
        transition:
          opacity 50ms cubic-bezier(0.33, 1, 0.68, 1),
          transform 150ms cubic-bezier(0.33, 1, 0.68, 1);
      }
    }

    .sidebar-action__badge {
      z-index: 100;
      position: absolute;
      right: calc(var(--xs) * -1);
      bottom: var(--xs);
      transform: translateY(25%);
      padding: 0;
    }

    .sidebar-action--sub {
      min-height: 26px;

      &:before {
        left: 50%;
        top: 50%;
        transform: translateX(-50%) translateY(-50%);
      }
    }

    .global-nav > ul > li + li {
      --separator-width: calc(28rem / 16);

      &:before {
        position: absolute;
        top: calc(var(--s) / -2);
        left: calc((var(--global-sidebar-width) - var(--separator-width)) / 2);
        content: '';
        width: var(--separator-width);
        height: 1px;
        margin: 0 auto;
        background-color: var(--hairline-color);
      }
    }
  }

  [data-sidebar='expanded'] {
    #sidebar-toggle-icon {
      transform: rotate(180deg);
    }
  }
}

#sidebar-trigger {
  display: none;

  @media only screen and (min-width: $minFullUiWidth) {
    display: flex;
  }
}

